# covid-19-data-engineering-pipeline

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .yamllint  LICENSE  Pipfile  README.md  pyproject.toml  setup_aws.sh
.github/workflows/: manual_deploy.yaml  pr.yaml  release.yaml  release.yml
airflow/: .env  Dockerfile  docker-compose.yaml
airflow/dags/: download_from_s3.py  process_vaccinations.py
airflow/dags/tasks/: ingestion.py  processing.py
airflow/scripts/: entrypoint.sh
great_expectations/expectations/: .ge_store_backend_id  exp_suite.json  sync_expectations.sh
great_expectations/great_expectations/: great_expectations.yml
great_expectations/great_expectations/checkpoints/: checkpoint.yml
great_expectations/great_expectations/expectations/: exp_suite.json  sync_expectations.sh
ops/: stack.yaml
ops/container/: Dockerfile  handler.py
ops/container/api_lambda/: Dockerfile  handler.py  requirements.txt
ops/container/ge_lambda/: Dockerfile  handler.py  requirements.txt
ops/container/great_expectations_lambda/: Dockerfile  handler.py  requirements.txt
ops/layers/CSSEGISandData/: requirements.txt
ops/layers/csse/: requirements.txt
ops/stack/: deploy_stack.yaml  ecr_stack.yaml  pipeline_stack.yaml  sns_stack.yaml  stack.yaml
ops/stack/cdk/: package-lock.json
ops/stack/redshift_stack/: .gitignore  package-lock.json  package.json
pipeline/glue_jobs/: vaccinations_data_processing.py
src/airflow/: .env  Dockerfile
src/airflow/dags/: process_vaccinations.py
src/glue_jobs/: cases_data_processing.py
(+8 files in other folders)
