[tool.ruff]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "W", # pycodestyle
    "I", # isort
    "N", # pep8-naming
    "ANN", # function annotations
    "B", # bugbear
    "A", # built-ins
    "DTZ", # flake8-datetimez
]

target-version = "py39"

[tool.ruff.isort]
known-third-party = ["great_expectations"]

[tool.ruff.flake8-annotations]
suppress-none-returning = true

[tool.poetry]
name = "covid-19-data-engineering-pipeline"
version = "v21"
description = "A Covid-19 data pipeline on AWS"
authors = ["Moritz Körber"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
requests = "^2.28.2"
boto3 = "*"
pandas = "~1.4.4"
pyspark = "~3.3.1"
pyarrow = "~8.0.0"
apache-airflow = "2.5.2"
awswrangler = "~2.17.0"
great-expectations = "^0.14.13"
s3fs = "~2022.11.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
